# feather-flow

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  __main__.py  pyproject.toml
.github/workflows/: build-pdf.yml  build-sphinx-docs.yml  test.yml
assets/: cormorant-garamond.css  ff-2026.css  noto-serif-kr.css
docs/: conf.py  index.rst
docs/designer-guide/: assets-and-styling.rst  data-reference.rst  intro.rst  jinja2-loops-conditionals.rst  jinja2-macros.rst  jinja2-variables.rst  live-preview.rst  project-structure.rst  template-basics.rst  template-parameters.rst
docs/developer-guide/: calendar-and-days.rst  holidays.rst  intro.rst  pdf-postprocessing.rst  progress-tracking.rst  rendering.rst
docs/internals/: building-docs.rst  intro.rst  linting-and-ci.rst  project-layout.rst  testing.rst
pages/: feather-flow.html  ff-2026.html
planners/demo/: demo.html  params.xml
planners/ff-2026/: ff-2026.html  params.xml
planners/ff-2026/assets/: cormorant-garamond.css  ff-2026-kr.css  ff-2026.css
src/pyplaner/: __init__.py  __main__.py  calendar.py  dayinfo.py  optimize_pdf.py  planer.py  watch.py  weekday.py
src/pyplaner/providers/: isdayoff.py  nagerdate.py
src/pyplanner/: __init__.py  __main__.py  calendar.py  dayinfo.py  lang.py  liveserver.py  params.py  pdfbookmarks.py  pdfopt.py  planner.py  translations.py  weekday.py
src/pyplanner/progress/: __init__.py  base.py  protocol.py  quiet.py  simple.py  tqdm.py  tty.py
src/pyplanner/providers/: __init__.py  isdayoff.py  nagerdate.py
src/pyplanner/tracker/: __init__.py  base.py  protocol.py  quiet.py  simple.py  tqdm.py
tests/: test_calendar.py  test_dayinfo.py  test_lang.py  test_liveserver.py  test_main.py  test_optimize_pdf.py  test_params.py  test_pdfopt.py  test_planer.py  test_planner.py  test_progress.py  test_providers.py  test_tracker.py  test_translations.py  test_watch.py  test_weekday.py
