[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplanner"
version = "1.0.0"
description = "A digital planner PDF generation library"
authors = [
    { name = "Vlad Vovchenko", email = "vlad.vovchenko93@gmail.com" }
]
readme = "README.rst"
requires-python = ">=3.12"

dependencies = [
    "jinja2>=3.1",
    "playwright>=1.58"
]

[project.optional-dependencies]
docs = ["sphinx>=7.0", "sphinx-rtd-theme>=2.0"]
test = ["pytest>=9.0", "pytest-cov>=7.0"]
full = [
    "pikepdf>=10.3",
    "tqdm>=4.67",
]
dev = [
    "pyplanner[docs]",
    "pyplanner[test]",
]

[project.scripts]
pyplanner = "pyplanner.__main__:main"
