[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplanner"
version = "1.0.0"
description = "A digital planner PDF generation library"
authors = [
    { name = "Vlad Vovchenko", email = "vlad.vovchenko93@gmail.com" }
]
readme = "README.rst"
requires-python = ">=3.12"

dependencies = [
    "jinja2>=3.1",
    "livereload>=2.7",
    "pikepdf>=10.3",
    "playwright>=1.58",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "pytest>=9.0",
    "pytest-cov>=7.0",
]

[project.scripts]
pyplanner = "pyplanner.__main__:main"
