[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplanner"
version = "1.0.0"
description = "A digital planner PDF generation library"
authors = [
    { name = "Vlad Vovchenko", email = "vlad.vovchenko93@gmail.com" }
]
readme = "README.rst"
requires-python = ">=3.12"

dependencies = [
    "jinja2>=3.1",
    "livereload>=2.7",
    "pikepdf>=10.3",
    "playwright>=1.58",
    "tqdm>=4.67",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.19",
    "pre-commit>=4.5",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.15",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "types-tqdm>=4.67",
]

[project.scripts]
pyplanner = "pyplanner.__main__:main"

[tool.mypy]
python_version = "3.12"
# Enable all optional strictness flags at once
strict = true

[[tool.mypy.overrides]]
module = "livereload.*"
# livereload has no type stubs or py.typed marker
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
# Tests use fixtures and mocks that are hard to type fully
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[tool.ruff]
target-version = "py312"
line-length = 80
# First-party package root for correct import sorting
src = ["src"]

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear - common bug patterns
    "E",    # pycodestyle errors
    "F",    # pyflakes - unused imports, variables, etc.
    "N",    # pep8-naming conventions
    "PTH",  # flake8-use-pathlib - prefer pathlib over os.path
    "RUF",  # Ruff-specific rules
    "S",    # flake8-bandit - security checks
    "SIM",  # flake8-simplify - code simplification
    "UP",   # pyupgrade - modern Python syntax
    "W",    # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
# RUF001: file contains Cyrillic characters for translations
"src/pyplanner/lang.py" = ["RUF001"]
# S110/S112: broad except-pass/continue is intentional
# for best-effort PDF optimization
"src/pyplanner/pdfopt.py" = ["S110", "S112"]
# S310: urlopen calls are needed to fetch external APIs
"src/pyplanner/providers/*" = ["S310"]
# S101: assert is the standard way to write test checks
"tests/*" = ["S101"]
# E402: imports after pytest.importorskip must be late
"tests/test_pdfopt.py" = ["E402"]
